# garland

./: .gitignore  LICENSE  NEXT_WAVE.md  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/andotherstuff/garland/: AppLaunchTest.kt  FakeGarlandNetworkHarness.kt  GarlandDocumentsProviderTest.kt  MainActivityDiagnosticsTest.kt  PendingSyncWorkerTest.kt  RestoreDocumentWorkerTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/andotherstuff/garland/: ComposeActivity.kt  ConfigActivity.kt  DiagnosticsActivity.kt  DocumentDiagnosticsFormatter.kt  DocumentDiagnosticsScreenPresenter.kt  GarlandConfig.kt  GarlandDocumentsProvider.kt  GarlandDownloadExecutor.kt  GarlandManifestValidator.kt  GarlandPlanInspector.kt  GarlandSessionStore.kt  GarlandUploadExecutor.kt  LocalDocumentStore.kt  MainActivity.kt  MainScreenStatusPresenter.kt  NativeBridge.kt  NostrRelayPublisher.kt  ProviderMimePolicy.kt  ProviderSearchRanking.kt  RestoreWorkResultPolicy.kt
app/src/main/res/drawable/: bg_garland_window.xml  bg_status_chip.xml  ic_garland_mark.xml
app/src/main/res/layout/: activity_compose.xml  activity_config.xml  activity_diagnostics.xml  activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
automation/: verify_alpha_no_device.sh
core/: Cargo.toml
core/src/: commit_crypto.rs  crypto.rs  identity.rs  jni_api.rs  lib.rs  mvp_write.rs  nostr_event.rs  packaging.rs
docs/: ALPHA_RELEASE_CHECKLIST.md  CURRENT_STATUS.md  RELEASE_NOTES_v0.0.1-alpha.md
(+16 files in other folders)
