[package]
name = "garland_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bech32 = "0.11.0"
bip32 = "0.5.3"
bip39 = "2.2.0"
base64 = "0.22.1"
chacha20 = "0.9.1"
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
jni = "0.21.1"
k256 = { version = "0.13.4", features = ["schnorr"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
signature = "2.2.0"
thiserror = "2.0.17"

[dev-dependencies]
pretty_assertions = "1.4.1"
